# cl-chat-reborn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  THREAT_MODEL.md  client.py  client_enhanced.py  demo.py  encryption.py  peer.py  pyproject.toml  requirements.txt  sanitizer.py  server.py  terminal_ui.py  test_chat.py  trace_clearance.py
.github/workflows/: ci.yml
core/: commands.py  connection.py  discovery.py  display.py  dm.py  fingerprint_challenge.py  peer.py  router.py  seen_ids.py  tofu.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
tests/: conftest.py  test_encryption.py  test_peer.py  test_sanitizer.py
tests/unit/: test_commands.py  test_connection.py  test_direct_only.py  test_discovery.py  test_display.py  test_dm.py  test_mesh_ttl.py  test_reconnect.py  test_router.py  test_seen_ids.py  test_tofu.py
